@@ -7,6 +7,8 @@ Changes that could break older environments:
 Other changes:
 --------------
 
+* New attribute ignorecontents for <different> selector
+
 Fixed bugs:
 -----------
 
